--- a/src/main/resources/templates/authorize.html
+++ b/src/main/resources/templates/authorize.html
@@ -10,14 +10,8 @@
 ${error}
 </#if>
 
-userName: ${userName}
-
-userTenantId: ${userTenantId}
-
-<#if userPrincipalName??>
-userPrincipalName: ${userPrincipalName}
-</#if>
-
+displayName: ${displayName}
+userPrincipalName :${userPrincipalName}
 
 </body>
 </html>
