--- a/src/main/resources/templates/mail.html
+++ b/src/main/resources/templates/mail.html
@@ -25,28 +25,28 @@ ${error}
     <#list messages as message>
         <tr>
             <td>
-                <#if message.isRead??>
+                <#if message.rawObject.isRead??>
                     <span class="glyphicon glyphicon-envelope"></span>
                 </#if>
             </td>
             <td>
-                <#if message.from??>
-                    ${message.from.emailAddress.name}
+                <#if message.rawObject.from??>
+                    ${message.rawObject.from.emailAddress.name}
                 </#if>
             </td>
             <td>
-                <#if message.subject??>
-                    ${message.subject}
+                <#if message.rawObject.subject??>
+                    ${message.rawObject.subject}
                 </#if>
             </td>
             <td>
-                <#if message.receivedDateTime??>
-                    ${message.receivedDateTime?string('yyyy-MM-dd hh:mm:ss')}
+                <#if message.rawObject.receivedDateTime??>
+                    ${message.rawObject.receivedDateTime}
                  </#if>
             </td>
             <td>
-                <#if message.bodyPreview??>
-                    ${message.bodyPreview}
+                <#if message.rawObject.bodyPreview??>
+                    ${message.rawObject.bodyPreview}
                 </#if>
             </td>
         </tr>
